[project]
name = "langgraph"
version = "0.0.1"
authors = [{ name = "huy.d@hotmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
    
    # LangGraph MCP Agent dependencies
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "databricks-mcp>=0.1.0",
    "databricks-langchain>=0.1.0",
    "databricks-agents>=0.1.0",
    "mlflow-skinny[databricks]>=2.0.0",
    "databricks-sdk>=0.29.0",
    "nest-asyncio>=1.5.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "databricks-bundles==0.276.0",
]

[project.scripts]
main = "langgraph.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 125
